# caf

./: Cargo.toml  README.md
docs/: ideas.md
src/: main.rs
src/common/: mod.rs
