[package]
name = "caf"
version = "0.1.0"
edition = "2021"

license = "MIT"
description = "deixei cloud adoption framework CLI"
repository = "https://github.dev/deixei/caf"
homepage = "https://github.dev/deixei/caf"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.11"
colored = "2.1.0"
